# datalad-registry

./: .codespellrc  .coveragerc  .dockerignore  .env  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COPYING  Dockerfile  README.md  conftest.py  dev.Dockerfile  dev.dockerfile  docker-compose.broker.yml  docker-compose.dev-local.overrides.yml  docker-compose.dev-server.overrides.yml  docker-compose.dev.local.override.yml  docker-compose.dev.no-worker.yml  docker-compose.dev.override.yml  docker-compose.dev.yml  docker-compose.read-only.local.override.yml  docker-compose.read-only.yml  docker-compose.test.yml  docker-compose.testing.yml  docker-compose.yml  down  env.test  env.testing  flask  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.dev.txt  requirements.test.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.env  (+7 more)
.github/workflows/: lint.yml  shellcheck.yml  test.yml  type_check.yml
datalad_registry/: __init__.py  com_models.py  conf.py  config.py  dataset_urls.py  datasets.py  db.py  factory.py  make_celery.py  models.py  overview.py  root.py  runcelery.py  schema.sql  search.py  tasks.py  utils.py
datalad_registry/blueprints/api/: __init__.py  dataset_urls.py  url_metadata.py  utils.py
datalad_registry/blueprints/api/dataset_urls/: __init__.py  models.py  tools.py  utils.py
datalad_registry/blueprints/api/url_metadata/: __init__.py  models.py
datalad_registry/resources/: catalog-config.json
datalad_registry/static/: main.css
datalad_registry/static/catalog/: config.json  index.html
datalad_registry/static/catalog/assets/: app_globals.js  app_router.js
datalad_registry/tasks/: __init__.py  tls.py  utils.py
datalad_registry/tasks/utils/: __init__.py  builtin_meta_extractors.py  usage_dashboard.py
datalad_registry/templates/: overview.html
datalad_registry/tests/: conftest.py  populate.py  test__init__.py  test_conf.py  test_datalad_urls.py  test_dataset_urls.py  test_datasets.py  test_make_celery.py  test_models.py  test_overview.py  test_root.py  test_search.py  test_tasks.py  tools.py  utils.py
datalad_registry/tests/data/datalad-registry-db/: docker-compose.yml
datalad_registry/tests/test_blueprints/test_api/: test_dataset_urls.py  test_url_metadata.py
datalad_registry/tests/test_new_organization/: conftest.py  test_api_json_error_response.py  test_overview.py
datalad_registry/tests/test_new_organization/test_blueprints/test_api/: test_dataset_urls.py  test_url_metadata.py
datalad_registry/tests/test_new_organization/test_tasks/: conftest.py  test_extract_meta.py  test_process_dataset_url.py
datalad_registry/tests/test_new_organization/test_utils/: test_misc.py
datalad_registry/tests/test_tasks/: __init__.py  conftest.py  test_chk_url_to_update.py  test_extract_ds_meta.py  test_extract_meta.py  test_helpers.py  test_mark_for_chk.py  test_process_dataset_url.py  test_tls.py  test_url_chk_dispatcher.py  test_usage_dashboard_sync.py  test_utils.py
datalad_registry/tests/test_tasks/test_utils/: test__init__.py  test_builtin_meta_extractors.py
datalad_registry/tests/test_utils/: test_datalad_tls.py  test_misc.py  test_pydantic_json.py  test_pydantic_tls.py
datalad_registry/utils/: __init__.py  datalad_tls.py  flask_tools.py  misc.py  pydantic_json.py  pydantic_tls.py
datalad_registry_client/: __init__.py  announce_update.py  consts.py  get_urls.py  opts.py  search.py  submit.py  submit_urls.py  utils.py
datalad_registry_client/tests/: test_announce_update.py  test_get_urls.py  test_submit.py  test_submit_urls.py
docs/: api.md  openapi.yml
migrations/: env.py
migrations/versions/: 029941610de0_change_all_json_columns_to_jsonb.py  08c8e8731782_add_the_urlmetadata_model.py  769fc6a4d2ea_removing_customized___tablename___urls_.py  7a22e9d79946_rename_to.py  7d283978c4a9_change_repourl_branches_to_a_dict.py  a26ee17e3a75_add_the_to_the_model.py  a398e7225012_rename_model_url_to_repourl.py  c6873af75bd6_prepare_model_for_update_function.py  e35239d06d44_changing_the_branches_column_to_jsonb_.py  f1a2b3c4d5e6_add_has_run_records_to_repourl.py
tools/: get_flower_exceptions_summary  populate.py  populate_datasets.datalad.org  populate_url_metadata.py  remove_repos.py  run_dandi_files_extractor.py  service-falkor.sh  service.sh  sync_with_user_dashboard.py
