[build-system]
requires = ["setuptools >= 46.4.0", "versioningit ~= 3.0", "wheel ~= 0.32"]
build-backend = "setuptools.build_meta"

[tool.versioningit]

[tool.pytest.ini_options]
# Config pytest to ignore dirs created, by default, by a dev instance of DL-Registry
norecursedirs = ["services", "instance"]
