[metadata]
name = datalad-registry
#version = # Set by versioningit
url = https://github.com/datalad/datalad-registry
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = DataLad dataset registry
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.9
install_requires =
    celery >= 5.0
    click
    datalad >= 0.18.0
    Flask
    Flask-SQLAlchemy
    importlib-metadata; python_version < "3.8"
    SQLAlchemy >= 1.4, < 2.0
    psycopg2 >= 2.9, < 3.0
    pydantic >= 1.10
packages = find:

[options.entry_points]
datalad.extensions =
    registry = datalad_registry_client:command_suite

[options.extras_require]
tests =
    coverage>=7.0
    pytest>=7.0
    pytest-cov>=4.0

dev =
    %(tests)s
    tox>=3.0
    black >= 22.0, < 23.0

[mypy]
ignore_missing_imports = True
