[metadata]
name = datalad-registry
#version = # Set by versioningit
url = https://github.com/datalad/datalad-registry
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = DataLad dataset registry
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.9
install_requires =
    celery[redis] ~= 5.0
    click ~= 8.1
    datalad ~= 0.18
    datalad-metalad ~= 0.4
    Flask ~= 2.3
    flask-openapi3 ~= 2.3
    Flask-SQLAlchemy ~= 3.1
    lark ~= 1.1
    SQLAlchemy ~= 2.0
    psycopg2 ~= 2.9
    pydantic ~= 1.10
    python-dotenv[cli] ~= 1.0
    Flask-Migrate ~= 4.0
    yarl ~= 1.9
    datalad-catalog ~= 1.1
    datalad_neuroimaging ~= 0.3.0
    flower ~= 2.0

packages = find:

[options.entry_points]
datalad.extensions =
    registry = datalad_registry_client:command_suite

[options.extras_require]
tests =
    coverage ~= 7.0
    pytest ~= 8.1
    pytest-cov ~= 4.0
    beautifulsoup4 ~= 4.12
    pytest-mock ~= 3.0
    responses ~= 0.24

dev =
    %(tests)s
    tox>=3.0
    black ~= 24.2
    flake8 ~= 7.0
    isort ~= 5.11
    mypy ~= 1.9
    pre-commit ~= 3.6
    types-PyYAML
    types-requests

[mypy]
ignore_missing_imports = True
plugins = pydantic.mypy
