[metadata]
name = datalad-registry
#version = # Set by versioningit
url = https://github.com/datalad/datalad-registry
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = DataLad dataset registry
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.9
install_requires =
    celery[redis] ~= 5.0
    click ~= 8.1
    datalad ~= 0.18
    datalad-catalog ~= 1.1
    datalad-metalad ~= 0.4
    datalad_neuroimaging ~= 0.3.0
    Flask-Migrate ~= 4.0
    flask-openapi3 ~= 2.3
    Flask-SQLAlchemy ~= 3.1
    flower ~= 2.0
    lark ~= 1.1
    psycopg2 ~= 2.9
    pydantic ~= 1.10
    python-dotenv[cli] ~= 1.0
    SQLAlchemy ~= 2.0
    yarl ~= 1.9

packages = find:

[options.entry_points]
datalad.extensions =
    registry = datalad_registry_client:command_suite

[options.extras_require]
test =
    beautifulsoup4 ~= 4.12
    coverage ~= 7.0
    pytest ~= 8.1
    pytest-cov ~= 4.0
    pytest-mock ~= 3.11
    responses ~= 0.24

dev =
    %(test)s
    black[d] ~= 24.2
    codespell ~= 2.2
    flake8 ~= 7.0
    isort ~= 5.11
    mypy ~= 1.9
    pre-commit ~= 3.6
    tox >= 3.0
    types-PyYAML
    types-requests

[mypy]
ignore_missing_imports = True
plugins = pydantic.mypy
